fix: gate footstep bump behind fx toggle

--- a/dustland.html
+++ b/dustland.html
@@ -112,6 +112,10 @@
           <input type="checkbox" id="fxColorBleed" />
         </div>
         <div class="field">
+          <label for="fxFootstepBump">Footstep Camera Bump</label>
+          <input type="checkbox" id="fxFootstepBump" />
+        </div>
+        <div class="field">
           <label for="fxGrayscale">Grayscale</label>
           <input type="checkbox" id="fxGrayscale" />
         </div>
