fix: improve adventure kit layout

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -315,7 +315,7 @@
   </style>
 </head>
 
-<body>
+<body class="adventure-kit">
   <canvas id="game" width="0" height="0" class="glow" aria-label="Dustland CRT"></canvas>
   <div class="ak-layout">
       <section class="card map-card" id="mapCard">
