feat: render walled zones onto map tiles

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -669,6 +669,13 @@
           <label>Use Item<input id="zoneUseItem" /></label>
           <label>Reward<input id="zoneReward" /></label>
           <label><input type="checkbox" id="zoneOnce" />Once</label>
+          <label><input type="checkbox" id="zoneWalled" />Walled</label>
+          <div id="zoneEntrancesWrap" style="display:none;margin-left:8px;">
+            <label><input type="checkbox" id="zoneEntranceNorth" />North Entrance</label>
+            <label><input type="checkbox" id="zoneEntranceSouth" />South Entrance</label>
+            <label><input type="checkbox" id="zoneEntranceEast" />East Entrance</label>
+            <label><input type="checkbox" id="zoneEntranceWest" />West Entrance</label>
+          </div>
           <button class="btn" id="addZone">Add Zone</button>
           <button class="btn" id="delZone" style="display:none">Delete Zone</button>
         </div>
