feat: surface multiplayer presence in game log

--- a/dustland.html
+++ b/dustland.html
@@ -236,6 +236,8 @@
   </div>
 
     <script defer src="./scripts/event-bus.js"></script>
+    <script defer src="./scripts/supporting/multiplayer-sync.js"></script>
+    <script defer src="./scripts/multiplayer.js"></script>
     <script defer src="./scripts/supporting/chiptune.js"></script>
     <script defer src="./scripts/fx-config.js"></script>
     <script defer src="./scripts/ui.js"></script>
