feat: add debug menu with save import export

--- a/game.html
+++ b/game.html
@@ -511,8 +511,7 @@
               <button class="btn" id="clearBtn">Clear Save</button>
               <button class="btn" id="resetBtn">Reset</button>
               <button class="btn" id="settingsBtn">Settings</button>
-              <button class="btn" id="fxBtn">FX</button>
-              <button class="btn" id="perfBtn">Perf</button>
+              <button class="btn" id="debugBtn">Debug</button>
               <button class="btn" id="campBtn">Camp</button>
               <button class="btn" id="screenshotBtn" hidden>Screenshot</button>
             </div>
@@ -543,6 +542,20 @@
           <button class="btn" id="startContinue">Continue</button>
           <button class="btn" id="startNew">New Game</button>
         </div>
+      </main>
+    </div>
+  </div>
+
+  <div id="debugMenu">
+    <div class="win">
+      <header>Debug Tools</header>
+      <main>
+        <button class="btn" id="fxBtn">FX Tools</button>
+        <button class="btn" id="perfBtn">Performance Graph</button>
+        <button class="btn" id="exportSaveBtn">Export Save</button>
+        <button class="btn" id="importSaveBtn">Import Save</button>
+        <input type="file" id="importSaveInput" accept="application/json" hidden />
+        <button class="btn" id="debugClose">Close</button>
       </main>
     </div>
   </div>
