fix: scale text consistently with font slider

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -13,7 +13,7 @@
       background: #000;
       color: #c8f7c9;
       font-family: 'Pixelify Sans', sans-serif;
-      font-size: 14px;
+      font-size: 0.875rem;
       line-height: 1.5;
       position: relative;
       min-height: 100vh;
@@ -45,7 +45,7 @@
     }
 
     .list {
-      font-size: 13px;
+      font-size: 0.8125rem;
       max-height: 200px;
       overflow-y: auto;
     }
@@ -64,7 +64,7 @@
     label {
       display: block;
       margin-top: 4px;
-      font-size: 12px;
+      font-size: 0.75rem;
     }
 
     input,
@@ -76,7 +76,7 @@
       border: 1px solid #2b3b2b;
       color: #c8f7c9;
       font-family: inherit;
-      font-size: 13px;
+      font-size: 0.8125rem;
       border-radius: 4px;
     }
 
@@ -118,11 +118,11 @@
 
     button.btn {
       margin-top: 6px;
-      font-size: 14px;
+      font-size: 0.875rem;
     }
 
     .btn-group .btn {
-      font-size: 13px;
+      font-size: 0.8125rem;
     }
 
     #stampWindow {
@@ -150,14 +150,14 @@
     }
 
     #stampWindow #nanoStampBtn {
-      font-size: 12px;
+      font-size: 0.75rem;
       margin: 4px auto 0;
       display: block;
       padding: 2px 4px;
     }
 
     legend {
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 600;
     }
 
@@ -739,7 +739,7 @@
         <button class="btn" type="button" id="closeDialogModal">Close</button>
       </div>
       <div id="treeEditor"></div>
-      <div id="treeWarning" style="color:#fc0;font-size:12px;margin-top:4px"></div>
+      <div id="treeWarning" style="color:#fc0;font-size:0.75rem;margin-top:4px"></div>
       <button class="btn" type="button" id="addNode">Add Node</button>
       <datalist id="choiceFlagList"></datalist>
     </div>
