--- a/multiplayer.html
+++ b/multiplayer.html
@@ -7,11 +7,11 @@
   <style>
     body { max-width: 780px; margin: 40px auto; padding: 0 20px; font-family: 'Pixelify Sans', sans-serif; }
     h1, h2 { text-transform: uppercase; letter-spacing: 2px; }
-    textarea { width: 100%; box-sizing: border-box; min-height: 80px; font-family: monospace; font-size: 13px; padding: 8px; }
+    textarea { width: 100%; box-sizing: border-box; min-height: 80px; font-family: monospace; font-size: 0.8125rem; padding: 8px; }
     .row { margin-bottom: 24px; }
-    .status { font-size: 14px; color: #9ec2a4; margin-top: 8px; min-height: 20px; }
-    .muted { color: #9ea5a1; font-size: 14px; }
-    .peer-list { font-size: 14px; color: #d4f3d8; margin-top: 8px; }
+    .status { font-size: 0.875rem; color: #9ec2a4; margin-top: 8px; min-height: 20px; }
+    .muted { color: #9ea5a1; font-size: 0.875rem; }
+    .peer-list { font-size: 0.875rem; color: #d4f3d8; margin-top: 8px; }
     .section { border: 1px solid #2f3b2f; padding: 16px; border-radius: 6px; background: rgba(15, 24, 15, 0.6); margin-bottom: 20px; }
     .controls { display: flex; gap: 8px; flex-wrap: wrap; margin-top: 12px; }
     .controls .btn { flex: 0 0 auto; }
